# timeit

./: .gitignore  Cargo.toml  README.md  build.rs
completions/: _timeit  timeit.bash
src/: cli.yml  main.rs
