[package]
name = "timeit"
version = "0.4.1"
authors = ["Tom McKernan <tmeaglei@gmail.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
clap = {version = "~2.33.0", features = ["yaml", "color"]}

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies]
clap = {version = "~2.33.1", features = ["yaml", "color"]}
